# crewai-data-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  temp.csv  temp_db.sqlite
.devcontainer/: devcontainer.json
src/data_analysis_app/: main.py
src/data_analysis_app/crews/analysis_crew/: analysis_crew.py
src/data_analysis_app/crews/analysis_crew/config/: agents.yaml  tasks.yaml
src/data_analysis_app/tools/: sql_tool.py
