[project]
name = "data_analysis_app"
version = "0.1.0"
description = "data_analysis_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "data_analysis_app.main:kickoff"
run_crew = "data_analysis_app.main:kickoff"
plot = "data_analysis_app.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
